--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+  "permissions": ["notifications", "tabs"],
   "background": {
     "service_worker": "background.js"
   },
