--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,22 @@
 {
   "manifest_version": 3,
-  "name": "Sonos Subtitles",
-  "version": "1.0",
-  "description": "Displays lyrics for the current song on the Sonos web player.",
+  "name": "Sonos Subs",
+  "version": "1.1",
+  "description": "Shows lyrics and notifications for the Sonos Web App.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["notifications", "tabs"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "permissions": ["notifications", "storage"],
   "background": {
     "service_worker": "background.js"
   },
