--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Sonos Subs",
-  "version": "1.1",
-  "description": "Shows lyrics and notifications for the Sonos Web App.",
+  "version": "1.0.1",
+  "description": "Enhances the Sonos Web App by displaying song lyrics and more helpful features.",
+  "author": "Jeram.ai",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -16,7 +17,7 @@
       "128": "icons/icon128.png"
     }
   },
-  "permissions": ["notifications", "storage"],
+  "permissions": ["notifications", "storage", "tabs"],
   "background": {
     "service_worker": "background.js"
   },
