--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Sonos Subs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Enhances the Sonos Web App by displaying song lyrics and more helpful features.",
   "author": "Jeram.ai",
   "icons": {
@@ -18,6 +18,7 @@
     }
   },
   "permissions": ["notifications", "storage", "tabs"],
+  "host_permissions": ["http://*:1400/"],
   "background": {
     "service_worker": "background.js"
   },
